# python_code

./: append.py  data_types.py  dictionary.py  functions.py  in_keyword.py  list_comprehension.py  list_functions.py  numeric_functions.py  pyproject.toml  python_version.py  range_3.py  string_formatting.py  string_functions.py  temp.py  variables.py  while2.py  while_break.py
functions/: functions1.py  functions2.py  functions_1.py
langchain/: API_Key.txt
lists/: list_comprehension.py  list_functions.txt  list_methods.py
loops/for/: for_1.py  for_2.py
loops/while/: while_1.py  while_2.py  while_continue.py
numpy/: numpy1.py  test.py
pandas/: data_2.csv  pandas5.py  pandas_10.py  pandas_11.py  pandas_12.py  pandas_13.py  pandas_14.py  pandas_15.py  pandas_2.py  pandas_3.py  pandas_4.py  pandas_6.py  pandas_7.py  pandas_8.py  pandas_9.py  pandas_pivot_table.py
python_code.egg-info/: PKG-INFO  SOURCES.txt
ranges/: range_2.py  range_4.py
scipy/: scipy_constants.py
