[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_code"
version = "0.1.0"
description = "Python practice code."
readme = "README.md"
requires-python = ">=3.9.14"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4"
]

[tool.setuptools]
packages = ["my_package"]